[gd_scene load_steps=2 format=3 uid="uid://b1hfgrd054htg"]

[ext_resource type="Script" path="res://Login/login.gd" id="1_y18q7"]

[node name="login" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_y18q7")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 426.0
offset_bottom = 240.0
color = Color(0.890196, 0.741176, 0.796078, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
layout_mode = 0
offset_left = 52.0
offset_top = 87.0
offset_right = 387.0
offset_bottom = 218.0

[node name="MarginContainer" type="MarginContainer" parent="ColorRect/VBoxContainer"]
layout_mode = 2

[node name="email" type="LineEdit" parent="ColorRect/VBoxContainer/MarginContainer"]
layout_mode = 2
placeholder_text = "Type your e-mail"
alignment = 1
caret_blink = true
caret_blink_interval = 0.5

[node name="MarginContainer2" type="MarginContainer" parent="ColorRect/VBoxContainer"]
layout_mode = 2

[node name="password" type="LineEdit" parent="ColorRect/VBoxContainer/MarginContainer2"]
layout_mode = 2
placeholder_text = "Type your password"
alignment = 1
caret_blink = true
caret_blink_interval = 0.5

[node name="MarginContainer3" type="MarginContainer" parent="ColorRect/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/VBoxContainer/MarginContainer3"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="ColorRect/VBoxContainer/MarginContainer3/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6

[node name="login" type="Button" parent="ColorRect/VBoxContainer/MarginContainer3/HBoxContainer/MarginContainer"]
layout_mode = 2
text = "LOG IN"

[node name="MarginContainer2" type="MarginContainer" parent="ColorRect/VBoxContainer/MarginContainer3/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6

[node name="signup" type="Button" parent="ColorRect/VBoxContainer/MarginContainer3/HBoxContainer/MarginContainer2"]
layout_mode = 2
text = "SIGN UP"

[node name="MarginContainer4" type="MarginContainer" parent="ColorRect/VBoxContainer"]
layout_mode = 2

[node name="error_label" type="Label" parent="ColorRect/VBoxContainer/MarginContainer4"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.952941, 0, 0, 1)

[node name="Label" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 77.0
offset_top = 20.0
offset_right = 356.0
offset_bottom = 51.0
theme_override_font_sizes/font_size = 20
text = "Welcome to FreeFall Fighters"

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="pressed" from="ColorRect/VBoxContainer/MarginContainer3/HBoxContainer/MarginContainer/login" to="." method="_on_login_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/MarginContainer3/HBoxContainer/MarginContainer2/signup" to="." method="_on_signup_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_http_request_request_completed"]
